--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,13 @@
+  <div class="animation">
+  <iframe class="animation" src="https://giphy.com/embed/tkGr67V1CTJfGo9ujs" width="20%" height="25%" style="position:relative"></iframe>
+  </div>
+
 <div class="container">
   <div class="row">
     <div class="col card">
-      
-        <h2 class="card-header">LOGIN</h2>
-<form class="card-body login-form">
+
+      <h2 class="card-header cardtitle">LOGIN</h2>
+      <form class="card-body login-form">
         <div class="form-group">
           <label class="form-label">Username:</label>
           <input class="form-input" type="text" id="username-login" />
@@ -21,9 +25,9 @@
       </form>
     </div>
     <div class="col card">
-      
-        <h2 class="card-header">SIGN UP</h2>
-<form class="card-body signup-form">
+
+      <h2 class="card-header cardtitle">SIGN UP</h2>
+      <form class="card-body signup-form">
         <div class="form-group">
           <label class="form-label">Username:</label>
           <input class="form-input" type="text" id="username-signup" />
@@ -35,7 +39,7 @@
           <p>At Least 8 Characters Long</p>
         </div>
 
-          <button class="btn btn-primary" type="submit">SIGN UP</button>
+        <button class="btn btn-primary" type="submit">SIGN UP</button>
 
       </form>
     </div>
