--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,10 @@
-  <div class="animation">
-  <iframe class="animation" src="https://giphy.com/embed/tkGr67V1CTJfGo9ujs" width="20%" height="25%" style="position:relative"></iframe>
-  </div>
+
 
 <div class="container">
   <div class="row">
     <div class="col card">
 
-      <h2 class="card-header cardtitle">LOGIN</h2>
+      <h2 class="card-header cardtitle card-login">LOGIN</h2>
       <form class="card-body login-form">
         <div class="form-group">
           <label class="form-label">Username:</label>
@@ -19,14 +17,14 @@
         </div>
 
         <div class="form-group">
-          <button class="btn btn-primary" type="submit">LOGIN</button>
+          <button class="btn btn-primary btn-login" type="submit">LOGIN</button>
         </div>
 
       </form>
     </div>
     <div class="col card">
 
-      <h2 class="card-header cardtitle">SIGN UP</h2>
+      <h2 class="card-header cardtitle card-login">SIGN UP</h2>
       <form class="card-body signup-form">
         <div class="form-group">
           <label class="form-label">Username:</label>
@@ -39,7 +37,7 @@
           <p>At Least 8 Characters Long</p>
         </div>
 
-        <button class="btn btn-primary" type="submit">SIGN UP</button>
+        <button class="btn btn-primary btn-login" type="submit">SIGN UP</button>
 
       </form>
     </div>
