--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,14 @@
+<div class="container quote-container d-flex justify-content-center">
+  <p class="quote">"You is kind.<br>You is smart.<br>You is important."<br><br>-Kathryn Stockett</p>
+</div>
 
 
-<div class="container">
+<div class="container d-flex justify-content-center login-form">
   <div class="row">
-    <div class="col card">
+    <div class="col card loginCard card">
 
       <h2 class="card-header cardtitle card-login">LOGIN</h2>
-      <form class="card-body login-form">
+      <form class="card-body">
         <div class="form-group">
           <label class="form-label">Username:</label>
           <input class="form-input" type="text" id="username-login" />
@@ -22,13 +25,14 @@
 
       </form>
     </div>
-    <div class="col card">
+    <div class="col card loginCard card">
 
       <h2 class="card-header cardtitle card-login">SIGN UP</h2>
       <form class="card-body signup-form">
         <div class="form-group">
           <label class="form-label">Username:</label>
           <input class="form-input" type="text" id="username-signup" />
+
         </div>
 
         <div class="form-group">
@@ -37,7 +41,7 @@
           <p>At Least 8 Characters Long</p>
         </div>
 
-        <button class="btn btn-primary btn-login" type="submit">SIGN UP</button>
+        <button class="btn btn-primary btn-login m-0" type="submit">SIGN UP</button>
 
       </form>
     </div>
