--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,9 +23,8 @@
       <h1><a class="title" href="/">Motivation Station</a></h1>
       <nav class="navbar nav-tabs justify-content-end">
 
-        <div class="animation">
-          <img src="../../public/images/giphy (1).gif" alt="high-fiving squares" height="50" width="50"> 
-          <!--<iframe class="animation" src="https://giphy.com/embed/tkGr67V1CTJfGo9ujs"></iframe> -->
+        <div class="animation mx-auto">
+          <iframe class="animation" src="https://giphy.com/embed/tkGr67V1CTJfGo9ujs"></iframe>
         </div>
 
         <a class="link" href="/">Home</a>
