updated package to dayjs and added feature to helpers and some handlebars files

--- a/views/goal-by-id.handlebars
+++ b/views/goal-by-id.handlebars
@@ -5,7 +5,7 @@
             <div class="card-body goal-body">
                 <p class="card-body goal-content">{{goal.content}}</p>
                 <p class="card-text goal-author">Posted by <span class="goal-username">{{goal.user.username}}</span> on
-                    {{format_date goal.createdAt}}</p>
+                    {{dayjs}}</p>
             </div>
         </div>
     </div>
@@ -31,7 +31,7 @@
                     {{comment_content}}
                 </div>
                 <div class="comment-author">
-                    -{{user.username}}, {{format_date createdAt}}
+                    -{{user.username}}, {{dayjs}}
                 </div>
             </div>
         </div>
