--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,7 @@
             <div class="card-body goal-body">
                 <p class="card-body goal-content">{{content}}</p>
                 <p class="card-text goal-author">Posted by <span class="goal-username">{{user.username}}</span> on
-                    {{format_date createdAt}}</p>
+                    {{dayjs}}</p>
             </div>
         </div>
     </div>
