cleaning classes in login

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
-<div class="container quote-container d-flex justify-content-center">
-  <p class="quote">"You is kind.<br>You is smart.<br>You is important."<br><br>-Kathryn Stockett</p>
+<div class="card">
+  <div class="container quote-container card-body">"You is kind.<br>You is smart.<br>You is important."<br><br>-Kathryn Stockett</div>
 </div>
 
 
