--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,10 @@
-<div class="card">
+<div class="card quote-card">
   <div class="container quote-container card-body">"You is kind.<br>You is smart.<br>You is important."<br><br>-Kathryn Stockett</div>
 </div>
 
 
 <div class="container d-flex justify-content-center login-form">
-  <div class="row">
+  <div class="row login-wrap">
     <div class="col card loginCard card">
 
       <h2 class="card-header cardtitle card-login">LOGIN</h2>
