--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <div>
+  <div class="main-wrapper">
     <header>
       <h1><a class="title" href="/">Motivation Station</a></h1>
       <nav class="navbar nav-tabs justify-content-end">
