check for mistakes

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,9 +2,10 @@
 <article class="goal">
     <div class="container-fluid">
         <div class="card-header dashboard-goal">
+            <div id=""></div>
             <h4 class="card-title goal-title"><a class="link" href="/goal/{{id}}">{{title}}</a></h4>
             <div class="card-body goal-body">
-                <p class="card-body goal-content">{{content}}</p>
+                 <p class="card-body goal-content">{{content}}</p>
                 <p class="card-text goal-author">Posted by <span class="goal-username">{{user.username}}</span> on
                     {{format_date createdAt}}</p>
             </div>
