animated heart styling css

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
 <article class="goal">
     <div class="container-fluid">
         <div class="card-header dashboard-goal">
-            <div id=""></div>
+            <div id="heart">💗</div>
             <h4 class="card-title goal-title"><a class="link" href="/goal/{{id}}">{{title}}</a></h4>
             <div class="card-body goal-body">
                  <p class="card-body goal-content">{{content}}</p>
