--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,6 +174,29 @@ a:hover {
   
 }
 
+#heart{
+  font-size: 2em;
+  animation-name: side-to-side-motivator;
+  animation-duration: 3s;
+  animation-iteration-count: 1;
+  animation-timing-function: bezier;
+ }
+
+ @keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+ }
+
+ @keyframes side-to-side-motivator {
+  0% {
+    transform: translateX(-100px);
+  }
+  50% {
+    transform: translateX(100px);
+  }
+ }
+
 @media screen and (min-width:1100px){
   .navbar > * {
     flex: 0;
